feat: create a character profile (#8)
* refactor: add image placeholder for characters

* feat: create character profile

* chore: bump local database version

* docs: add PercentageChartView to README.md

* test: add test for CharacterInfoViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,31 @@
     <string name="previous">Previous</string>
 
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="error_cant_load_data">Oops! We couldnt load the data :(</string>
+    <string name="error_cant_load_data">There was an error loading the data. Are you connected to the internet?</string>
+
+    <string name="label_gender">Gender</string>
+    <string name="label_height">Height</string>
+    <string name="label_weight">Weight</string>
+
+    <string name="label_biography">Biography</string>
+
+    <string name="label_intelligence">Intelligence</string>
+    <string name="label_durability">Durability</string>
+    <string name="label_strength">Strength</string>
+    <string name="label_speed">Speed</string>
+    <string name="label_power">Power</string>
+    <string name="label_combat">Combat</string>
+
+    <string name="label_villain">Villain</string>
+    <string name="label_antihero">Antihero</string>
+
+    <string name="label_bio_name">%s is a </string>
+    <string name="label_bio_place_of_birth">" born in %s"</string>
+    <string name="label_bio_alteregos">, also known as %s</string>
+    <string name="label_bio_firstAppearance">" They first appeared in %s"</string>
+    <string name="label_bio_occupation">" Known for working as %s"</string>
+    <string name="label_bio_work_base">, usually at %s.</string>
+    <string name="label_bio_affiliation">" \nAffiliations: %s."</string>
+    <string name="label_bio_relatives">" Related to: %s."</string>
+    <string name="label_bio_aliases">" Some of their aliases include %s."</string>
 </resources>
